--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 margin: 20px;
                 display: flex;
                 padding: 10px;
+                border-radius:20px;
             }
             nav header {
                 display: flex;
